style(RowTitle): adjustments to the css to make the titles aligned with the values; refactor(TradeName and Value subcomponents): removal of the div that surrounded the components and small corrections in the css; feat(Driver subcomponent): creating a condition that allows you to render only the driver's name or the name with the image

--- a/src/components/Row/Driver/Driver.module.css
+++ b/src/components/Row/Driver/Driver.module.css
@@ -1,7 +1,7 @@
 .driverContainer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .driverImage {
@@ -10,7 +10,7 @@
 
 .driverName {
   text-transform: uppercase;
-  max-width: 253px;
+  max-width: 213px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
